--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
             </div>
 
-            <div class="col-8" style="text-align: center;" id="tablaContenido">
+            <div class="col-8 table-responsive" style="text-align: center;" id="tablaContenido">
                      
             </div>
 
