--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <body>
     <header>
         <div class="container-fluid p-1 bg-primary text-white text-center">
-            <h1>UCamp - CRUD</h1>
-            <p>Proyecto 2 Fullstack developer</p> 
+            <h1>UCamp - Fullstack Developer</h1>
+            <p>Proyecto 2 Aplicación CRUD</p> 
+            <p>Salvador Salinas Serrano</p> 
         </div>
     </header>    
 
@@ -60,8 +61,10 @@
         </div>
     </section>
     
-    <footer>
-
+    <footer class="col-12 d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+        <p class="col-4 mb-0 text-muted">© 2022 UCAMP</p>
+        <p class="col-4 mb-0 text-muted">Salvador Salinas Serrano</p>
+        <p class="col-4 mb-0 text-muted">CRUD</p>
     </footer>
 </body>
 <script src="./index.js" type="text/javascript"></script>
